deploy: 2f28f7ffb3b0aaab78292e59145ae5708751b303

--- a/control/key.html
+++ b/control/key.html
@@ -218,7 +218,7 @@
 <div class="table-wrapper"><table><thead><tr><th>Object View</th><th></th></tr></thead><tbody>
 <tr><td>Y</td><td>가위자르기</td></tr>
 <tr><td>P</td><td>프로퍼티 보기</td></tr>
-<tr><td>U</td><td>up 상위 노드로 이동</td></tr>
+<tr><td>U</td><td>상위 노드로 이동 (<code>U</code>p)</td></tr>
 <tr><td>O</td><td>네트워크 오버뷰</td></tr>
 <tr><td>Z</td><td>노드 모양 // Ctrl + 드래그로 기본 노드 모양 변경 가능</td></tr>
 <tr><td>C</td><td>노드 색깔 // Ctrl + 드래그로 기본 노드 색깔 변경 가능</td></tr>
@@ -279,6 +279,7 @@
 </ul>
 </li>
 </ul>
+<p>Alt + 마우스 가운데 버튼 : Export Parameter to Type Properties</p>
 
                     </main>
 
