--- a/etc/english_word.html
+++ b/etc/english_word.html
@@ -161,14 +161,23 @@
                         <h1 id="단어장"><a class="header" href="#단어장">단어장</a></h1>
 <h2 id="후디니"><a class="header" href="#후디니">후디니</a></h2>
 <div class="table-wrapper"><table><thead><tr><th></th><th></th><th></th></tr></thead><tbody>
-<tr><td>bevel</td><td>비스듬한 면</td><td>노드 있음</td></tr>
+<tr><td>bevel</td><td>비스듬한 면</td><td>노드</td></tr>
 <tr><td>seam</td><td>경계선, 이음매</td><td></td></tr>
 <tr><td>Lattice</td><td>격자, 격자모양</td><td>이 노드로 공간 왜곡같은 효과 주는게 가능</td></tr>
 <tr><td>cusp</td><td>(두 곡선이 만나는 뾰족한) 끝</td><td>Normal 노드에서 angle 조절</td></tr>
 <tr><td>vein</td><td>정맥, (식물의) 잎맥, 돌결, 나뭇결</td><td>Point VOP에서 사용가능한 노드</td></tr>
-<tr><td>subdivision</td><td>다시 나눔, 세분</td><td>노드 있음</td></tr>
+<tr><td>subdivision</td><td>다시 나눔, 세분</td><td>노드</td></tr>
 <tr><td>Curvature</td><td>곡률</td><td>Labs Measure Curvature노드</td></tr>
 <tr><td>Tubulent</td><td>난류 - 유체의 흐름이 바르지 않고 상하좌우로 섞이면서 흐르는 것</td><td>Tubulent Noise</td></tr>
+<tr><td>intrinsic</td><td>내재적인, 고유의, 본질적인</td><td></td></tr>
+<tr><td>shrink wrap</td><td>수축 포장</td><td>노드</td></tr>
+<tr><td>Vellum</td><td>양피지</td><td>ex) Vellum Hair 노드</td></tr>
+<tr><td>Wedge</td><td>쐐기</td><td>TOP</td></tr>
+<tr><td>erode</td><td>침식/풍화 되다</td><td></td></tr>
+<tr><td>slump</td><td>침체/무너진</td><td></td></tr>
+<tr><td>sediment</td><td>침전/퇴적물</td><td></td></tr>
+<tr><td>debris</td><td>잔해/쓰레기</td><td></td></tr>
+<tr><td>bedrock</td><td>기반/기반암</td><td></td></tr>
 </tbody></table>
 </div>
 <hr />
@@ -179,7 +188,8 @@ Pillar - (다리·건물 지붕 등을 받치는, 특히 장식 겸용의 둥근
 Plank - 널빤지
 Shingle - 조약돌, 지붕널, 대상 포진
 Chimney - 굴뚝
-annual rings, tree ring - 나이테</p>
+annual rings, tree ring - 나이테
+Foliage  -</p>
 <p>profile - 윤곽, (얼굴의) 옆모습
 Skew - 왜곡하다, 비스듬히 움직이다</p>
 <p>직각삼각형 right-angled triangle
