--- a/etc/reference.html
+++ b/etc/reference.html
@@ -410,6 +410,12 @@
 </ul>
 <h2 id="-1"><a class="header" href="#-1"></a></h2>
 <p>https://www.appliedhoudini.com/</p>
+<h2 id="indie-pixel"><a class="header" href="#indie-pixel">indie pixel</a></h2>
+<ul>
+<li><a href="https://www.indie-pixel.com/">https://www.indie-pixel.com/</a></li>
+<li><a href="https://indiepixel.gumroad.com/">https://indiepixel.gumroad.com/</a></li>
+<li><a href="https://www.youtube.com/@IndiePixel3D/playlists">https://www.youtube.com/@IndiePixel3D/playlists</a></li>
+</ul>
 <h2 id="person"><a class="header" href="#person">person</a></h2>
 <h3 id="luiz-kruel"><a class="header" href="#luiz-kruel">LUIZ KRUEL</a></h3>
 <ul>
@@ -444,6 +450,13 @@
 <h3 id="paul-ambrosiussen"><a class="header" href="#paul-ambrosiussen">Paul Ambrosiussen</a></h3>
 <ul>
 <li>https://www.youtube.com/@paulambrosiussen/videos</li>
+</ul>
+<h3 id="이규영"><a class="header" href="#이규영">이규영</a></h3>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=lyiI6B8-ntc">[게임] RP7의 아트 디렉션과 파이프라인 | 언리얼 서밋 온라인 2022</a></li>
+<li>https://blog.naver.com/furyedea255</li>
+<li><a href="https://www.youtube.com/watch?v=DbIKoNfSSGc">블리자드 배경아티스트 귬규영 -2부-</a></li>
+<li>https://www.artstation.com/peter_k_lee</li>
 </ul>
 
                     </main>
