--- a/etc/snippet-vex.html
+++ b/etc/snippet-vex.html
@@ -197,6 +197,16 @@ vector dir_next = normalize(@P - pos_next);
 
 float angle = degrees(acros(dot(dir_prev, dir_next)));
 </code></pre>
+<h3 id="라인-방향-설정"><a class="header" href="#라인-방향-설정">라인 방향 설정</a></h3>
+<pre><code class="language-vex">// 일단 PolyFrame사용해서 Tangent:N 설정해주고,
+// Wrangle(poitn)후 Visualize의 Marker&amp;Vector로 right은 빨강, up은 초록
+
+vector dir = @N;
+dir.y = 0;
+dir = normalize(dir);
+v@right = cross(dir, {0, 1, 0});
+v@up = cross(v@right, @N);
+</code></pre>
 
                     </main>
 
