--- a/file/file.html
+++ b/file/file.html
@@ -168,11 +168,20 @@
 <tr><td></td><td>.hipnc</td><td>Houdini Digital Assets Non-Commercial</td><td>EDUCATION / APPRENTICE</td></tr>
 <tr><td>세션</td><td>.hess</td><td><code>H</code>oudini <code>E</code>ngine <code>S</code>ession<code>S</code>ync</td><td></td></tr>
 </tbody></table>
-</div><div class="table-wrapper"><table><thead><tr><th></th><th></th></tr></thead><tbody>
+</div><div class="table-wrapper"><table><thead><tr><th>storing Houdini geometry</th><th></th></tr></thead><tbody>
 <tr><td>.geo</td><td>ASCII</td></tr>
 <tr><td>.bgeo</td><td>binary</td></tr>
+<tr><td>.bgeo.sc</td><td>compressed .bgeo file (using BLO<code>SC</code> compression). These are often as fast (or faster) to read/write than plain .bgeo files, and take less disk space.</td></tr>
 </tbody></table>
 </div>
+<ul>
+<li>Blosc
+<ul>
+<li>https://www.blosc.org/pages/blosc-in-depth/</li>
+</ul>
+</li>
+</ul>
+
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
