--- a/script/vex.html
+++ b/script/vex.html
@@ -422,6 +422,7 @@ addprim  // removeprim
 setprimattrib
 setprimgroup
 
+primintrinsic // Reads a primitive intrinsic from a geometry.
 
 addvertex
 
