--- a/control/config.html
+++ b/control/config.html
@@ -186,11 +186,10 @@
 <tr><td>$HIPFILE</td><td>hip 파일</td></tr>
 <tr><td>$HIPNAME</td><td>hip파일의 확장명을 제외한 파일명 hello.hip =&gt; hello</td></tr>
 <tr><td>$HIP</td><td>hip 파일이 저장된 절대경로</td></tr>
-<tr><td>$JOB</td><td>project 절대경로</td></tr>
+<tr><td>$JOB</td><td>project 절대경로 ( File &gt; New Project )</td></tr>
 <tr><td>$HFS</td><td>The path where Houdini is installed. Houdini reads the configuration information from $HFS/houdini.</td></tr>
 <tr><td>$HH</td><td>The path to Houdini supporting scripts and files inside $HFS. Usually $HFS/houdini</td></tr>
 <tr><td>$HHP</td><td>The path to Houdini’s python libraries. This will differ depending on the version of python that Houdini is built with. For example $HH/python3.7libs.</td></tr>
-<tr><td>$JOB</td><td>File &gt; New Project</td></tr>
 </tbody></table>
 </div>
 <p>HOUDINI_OTLSCAN_PATH</p>
