--- a/print.html
+++ b/print.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="kr" class="light sidebar-visible" dir="ltr">
+<html lang="ko" class="light sidebar-visible" dir="ltr">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
